
Features
--------

* Make ``ARCHIVE_PATH``, ``ARCHIVE_FILENAME`` translatable
  (Issue #3234)
* Support configuring Isso via ``GLOBAL_CONTEXT['isso_config']``
  (Issue #3225)
* Handle fragments in doc role (Issue #3212)
* Slugify references in doc role.
* Add Interlingua translation by Alberto Mardegan
* Add Afrikaans translation by Friedel Wolff
* Support for docutils.conf (Issue #3188)

Bugfixes
--------

* Avoid random rebuilds with sites whose locales are not fullly
  supported, and random rebuilds on multilingual sites using Python
  3.4/3.5 (Issue #3216)
* Apply modifications to ``default_metadata`` before copying it to
  other languages
* Make Commento comments work (Issue #3198)
* Correctly handle separators in the relative path given to
  "ignored_assets" key in theme meta files (Issue #3210)
* Fix error when ``nikola new_post`` receives directory name as
  path (Issue #3207)
* Add slashes to paths with query strings in ``nikola serve``
  only if there isn’t one before ``?``
* Read listings files as UTF-8
* Set one-file status basing on default language only (Issue #3191)
* Don’t warn if post status is set to ``published`` explicitly
  (Issue #3181)
* Remove mention of Twitter cards requiring an opt-in.
  This is not true anymore - anyone can use them.
* fancydates now workwith listdate items (eg. archives)
* bootstrap4 and bootblog4 themes no longer load moment.js when
  fancydates are off. (Issue #3231)

New in v8.0.1
=============

* Not compatible with Markdown 3.x yet, this release pins the
  requirement down to 2.x (until we get 3.x support done)

Features
--------

* Make URL displayed by ``nikola auto`` and ``nikola serve`` clickable
  (Issue #3166)

Bugfixes
--------

* Pandoc compiler was passing deleted argument (Issue #3171)
* Make ``nikola version --check`` work again (Issue #3170)
* Set logging level for reST to warning in order to limit noise
* Fix docinfo removal for sites that use reST docinfo metadata
  (Issue #3167)

New in v8.0.0