@@ -1,0 +1,6 @@
+import conf
+
+globals().update(vars(conf))
+ADDITIONAL_METADATA = {
+    "ID": "illegal"
+}
